<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/login_logo_Image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_email_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo_Image"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/login_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_EditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <Button
        android:id="@+id/login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_EditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_register_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_Button"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/no_account_need_new"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_or_login_with_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_register_account_link"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/or_login_with"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_or_login_with_TextView"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/facebook_signIn_Button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/facebook"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/twitter_signIn_Button"
            android:layout_width="125dp"
            android:layout_height="105dp"
            android:src="@drawable/twitter"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:id="@+id/google_signIn_Button"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:src="@drawable/google"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</RelativeLayout>