<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SetupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile_picture_Image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/setup_userName_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_profile_picture_Image"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="14dp"
        android:drawableStart="@drawable/username"/>

    <EditText
        android:id="@+id/setup_fullName_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_userName_EditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="14dp"
        android:drawableStart="@drawable/name"/>

    <EditText
        android:id="@+id/setup_country_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_fullName_EditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="14dp"
        android:drawableStart="@drawable/country"/>

    <Button
        android:id="@+id/setup_save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_country_EditText"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>